--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -7,28 +7,29 @@
   <!-- can be overridden at the command line with -Dversion=
        or in IDEA, in the ant properties dialog -->
   <property name="version" value="snapshot"/>
-  
+
   <target name="compile" description="Compile Java source.">
     <mkdir dir="${build.dir}/classes"/>
     <javac srcdir="${src.dir}"
          debug="on"
          destdir="${build.dir}/classes">
-      <classpath refid="compile.classpath"/>
     </javac>
     <copy toDir="${build.dir}/classes">
       <fileset dir="${src.dir}" excludes="**/*.java"/>
     </copy>
   </target>
 
-  <target name="test.compile" 
+  <target name="test.compile"
       depends="compile"
       description="Compile test source.">
     <mkdir dir="${build.dir}/test"/>
     <javac srcdir="${test.dir}"
          debug="on"
          destdir="${build.dir}/test">
-      <classpath path="${build.dir}/classes"/>
-      <classpath refid="compile.classpath"/>
+      <classpath>
+        <pathelement location="${build.dir}/classes"/>
+        <pathelement location="${lib.dir}/build/junit.jar"/>
+      </classpath>
     </javac>
     <copy toDir="${build.dir}/test">
       <fileset dir="${test.dir}" excludes="**/*.java"/>
@@ -38,24 +39,24 @@
   <target name="test"
       depends="test.compile"
       description="Execute JUnit tests.">
-    <java fork="true" 
+    <java fork="true"
         classname="junit.textui.TestRunner"
         failonerror="true"
         taskname="junit">
       <classpath>
         <pathelement location="${build.dir}/test"/>
         <pathelement location="${build.dir}/classes"/>
-        <path refid="compile.classpath"/>
+        <pathelement location="${lib.dir}/build/junit.jar"/>
       </classpath>
-      <arg value="${test.class}"/>    
+      <arg value="${test.class}"/>
     </java>
   </target>
-  
+
   <target name="clean"
       description="Remove generated files.">
     <delete dir="${build.dir}"/>
   </target>
-  
+
   <target name="jar" depends="compile" description="Build jar.">
     <mkdir dir="${build.dir}/dist"/>
     <jar jarfile="${build.dir}/dist/guice-${version}.jar">
@@ -65,9 +66,9 @@
 
   <target name="dist" depends="jar, javadoc"
        description="Build entire distribution.">
-    
-    <copy toDir="${build.dir}/dist" file="COPYING"/> 
-    <copy toDir="${build.dir}/dist"> 
+
+    <copy toDir="${build.dir}/dist" file="COPYING"/>
+    <copy toDir="${build.dir}/dist">
       <fileset dir="${lib.dir}" includes="*.jar"/>
       <fileset dir="${build.dir}" includes="javadoc/**/*"/>
     </copy>
@@ -75,7 +76,7 @@
     <zip destfile="${build.dir}/google-collect-${version}.zip"
       basedir="${build.dir}/dist"/>
   </target>
-  
+
   <target name="javadoc"
       description="Generate Javadocs.">
     <mkdir dir="${build.dir}/javadoc"/>
