--- a/build.xml
+++ b/build.xml
@@ -60,22 +60,22 @@
 
   <target name="jar" depends="compile" description="Build jar.">
     <mkdir dir="${build.dir}/dist"/>
-    <jar jarfile="${build.dir}/dist/google-collect-${version}.jar">
+    <mkdir dir="${build.dir}/dist/google-collect-${version}"/>
+    <jar jarfile="${build.dir}/dist/google-collect-${version}/google-collect-${version}.jar">
       <fileset dir="${build.dir}/classes"/>
     </jar>
   </target>
 
   <target name="jarsrc" description="Build jar of source.">
-    <jar jarfile="${build.dir}/dist/google-collect-${version}-src.zip">
+    <jar jarfile="${build.dir}/dist/google-collect-${version}/src-${version}.zip">
       <fileset dir="${src.dir}"/>
     </jar>
   </target>
 
   <target name="dist" depends="jar, jarsrc, javadoc"
        description="Build entire distribution.">
-
-    <copy toDir="${build.dir}/dist" file="COPYING"/>
-    <copy toDir="${build.dir}/dist">
+    <copy toDir="${build.dir}/dist/google-collect-${version}" file="COPYING"/>
+    <copy toDir="${build.dir}/dist/google-collect-${version}">
       <fileset dir="${build.dir}" includes="javadoc/**/*"/>
     </copy>
 
